# gpw

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  deploy.sh  firebase.json  pyproject.toml  run_backend.sh
backend/: .gcloudignore  Dockerfile  __init__.py  config.py  main.py  requirements.txt
backend/agents/: __init__.py  adk_pipeline.py  pipeline.py  prompts.py
backend/routers/: __init__.py  analyze.py
backend/services/: __init__.py  analysis_enrichment.py  document_parser.py  embeddings.py  firestore_db.py  heuristic_fallback.py  legal_knowledge_base.py  nlp_analyzer.py  pdf_report.py  storage.py
backend/tests/: test_analysis_enrichment.py  test_api.py  test_config.py  test_document_parser.py  test_heuristic_fallback.py  test_legal_knowledge_base.py  test_pdf_report.py  test_pipeline_optimization.py  test_security.py
frontend/: .gcloudignore  Dockerfile  cloudbuild.yaml  nginx.conf  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
sample_docs/: cached_demo_result.json  sample_saas_agreement.txt
